WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95252
Web Inspector: node search does not work with elements on touch start listener
https://bugs.webkit.org/show_bug.cgi?id=95252
Summary
Web Inspector: node search does not work with elements on touch start listener
Hanna
Reported
2012-08-28 15:04:07 PDT
the early return voids it
Attachments
Patch
(2.92 KB, patch)
2012-08-30 08:02 PDT
,
Hanna
no flags
Details
Formatted Diff
Diff
Patch
(1.98 KB, patch)
2012-08-30 08:17 PDT
,
Hanna
no flags
Details
Formatted Diff
Diff
Patch
(5.92 KB, patch)
2012-09-07 13:35 PDT
,
Konrad Piascik
no flags
Details
Formatted Diff
Diff
Patch
(3.77 KB, patch)
2012-10-01 10:26 PDT
,
Konrad Piascik
no flags
Details
Formatted Diff
Diff
Patch
(11.48 KB, patch)
2012-10-10 13:31 PDT
,
Konrad Piascik
no flags
Details
Formatted Diff
Diff
Patch
(7.72 KB, patch)
2012-10-11 10:28 PDT
,
Konrad Piascik
no flags
Details
Formatted Diff
Diff
Patch
(7.74 KB, patch)
2012-10-11 10:39 PDT
,
Konrad Piascik
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Hanna
Comment 1
2012-08-30 08:02:55 PDT
Created
attachment 161471
[details]
Patch
Antonio Gomes
Comment 2
2012-08-30 08:05:56 PDT
Comment on
attachment 161471
[details]
Patch Lets add this method to WebPagePrivate instead, so it does not became a public API.
Antonio Gomes
Comment 3
2012-08-30 08:06:48 PDT
Comment on
attachment 161471
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=161471&action=review
> Source/WebKit/blackberry/Api/WebPage.cpp:4100 > + // FIXME this checks if node search on inspector is enabled, though it might not be optimized
nit1: FIXME: nit2: lacks a dot at the end.
Hanna
Comment 4
2012-08-30 08:17:56 PDT
Created
attachment 161474
[details]
Patch
WebKit Review Bot
Comment 5
2012-08-30 08:53:00 PDT
Comment on
attachment 161474
[details]
Patch Clearing flags on attachment: 161474 Committed
r127146
: <
http://trac.webkit.org/changeset/127146
>
WebKit Review Bot
Comment 6
2012-08-30 08:53:03 PDT
All reviewed patches have been landed. Closing bug.
Konrad Piascik
Comment 7
2012-09-07 13:35:47 PDT
Reopening to attach new patch.
Konrad Piascik
Comment 8
2012-09-07 13:35:49 PDT
Created
attachment 162857
[details]
Patch Re-opening since the old patch doesn't solve the issue
Antonio Gomes
Comment 9
2012-09-08 22:11:55 PDT
Comment on
attachment 162857
[details]
Patch I would feel more comfortable if we get some Inspector guys' review here (and also unprefix the bug title).
Konrad Piascik
Comment 10
2012-09-09 10:10:25 PDT
Remove BlackBerry from title since this fix requires cross-platform changes.
Konrad Piascik
Comment 11
2012-09-10 08:33:27 PDT
update component
Yury Semikhatsky
Comment 12
2012-09-13 23:56:18 PDT
Comment on
attachment 162857
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=162857&action=review
> Source/WebKit/blackberry/Api/WebPage.cpp:4111 > + if (InspectorInstrumentation::searchingForNode(d->m_mainFrame->page()))
Could you provide more context on why it requires platform-specific handling for Blackberry? Also how is InspectorDOMAgent::handleMousePress called after this change?
Pavel Feldman
Comment 13
2012-09-14 01:45:30 PDT
Can this be implemented entirely on the WebCore level (as in the mouse case) so that all ports could use it?
Pavel Feldman
Comment 14
2012-09-14 01:46:30 PDT
Comment on
attachment 162857
[details]
Patch r- for the port-specific nature.
Konrad Piascik
Comment 15
2012-09-23 17:54:35 PDT
The event handling model of the BlackBerry is different than other ports and that is why there is port specific behaviour here. The issue in WebCore is that touch events fail to do 2 things when m_searchingForNode is true: 1) m_overlay->highlightedNode() is not set (in InspectorDOMAgent.cpp) 2) the touch event not prevented from firing There would need to be instrumentation added at the WebCore level to detect when touch events are fired and see if the InspectorDOMAgent is searching for a node.
Konrad Piascik
Comment 16
2012-10-01 10:26:49 PDT
Created
attachment 166499
[details]
Patch
Alexander Pavlov (apavlov)
Comment 17
2012-10-10 09:04:14 PDT
Comment on
attachment 166499
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=166499&action=review
The approach looks sane to me. Could you rebase the patch, since this one is not applicable to the tip of tree now?
> Source/WebKit/blackberry/ChangeLog:3 > + node search does not work with elements on touch start listener
I'm not quite familiar with the issue. Does this mean it is impossible to inspect elements that have the ontouchstart listener attached?
Konrad Piascik
Comment 18
2012-10-10 13:31:14 PDT
Created
attachment 168063
[details]
Patch
Pavel Feldman
Comment 19
2012-10-11 04:43:05 PDT
Comment on
attachment 168063
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=168063&action=review
> Source/WebCore/inspector/InspectorInstrumentation.h:-111 > - static void mouseDidMoveOverElement(Page*, const HitTestResult&, unsigned modifierFlags);
New names are confusing. I would leave them as is and add new signal "handleTouchEvent" instead.
> Source/WebCore/page/EventHandler.cpp:3771 > + if (InspectorInstrumentation::platformEventHandled(m_frame->page()))
There is no need to generate two signals, I'd rather call InspectorInstrumentation::handleTouchEvent and let inspector code handle it in case of inspect element mode.
Konrad Piascik
Comment 20
2012-10-11 06:34:42 PDT
As per the discussion with Pavel Feldman on IRC here's the plan: add InspectorInstrumentation::handleTouchEvent(Page*, Node*) and call this method only once in EventHandler::handleTouchEvent() avoiding 2 calls to InspectorInstruementation (which my current patch has)
Konrad Piascik
Comment 21
2012-10-11 10:28:19 PDT
Created
attachment 168250
[details]
Patch
Pavel Feldman
Comment 22
2012-10-11 10:31:08 PDT
Comment on
attachment 168250
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=168250&action=review
> Source/WebCore/ChangeLog:3 > + node search does not work with elements on touch start listener
Web Inspector: prefix missing
Konrad Piascik
Comment 23
2012-10-11 10:32:34 PDT
Update bug title.
Konrad Piascik
Comment 24
2012-10-11 10:39:28 PDT
Created
attachment 168252
[details]
Patch
WebKit Review Bot
Comment 25
2012-10-11 11:04:26 PDT
Comment on
attachment 168252
[details]
Patch Clearing flags on attachment: 168252 Committed
r131083
: <
http://trac.webkit.org/changeset/131083
>
WebKit Review Bot
Comment 26
2012-10-11 11:04:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug