[BlackBerry] node search does not work with elements on touch start listener https://bugs.webkit.org/show_bug.cgi?id=95252

Patch by Hanna Ma <Hanma@rim.com> on 2012-08-30
Reviewed by Antonio Gomes.

Fix the node search function of web insepctor on elements with touch start listener.
Add methods from webPage to check if the node search functionality is enabled before handling touch events.
PR194107

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPage::touchEvent):

Canonical link: https://commits.webkit.org/113317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127146 268f45cc-cd09-0410-ab3c-d52691b4dbfc